--- a/pages/profile.html
+++ b/pages/profile.html
@@ -3,46 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Winxify Portfolios</title>
-
-    <link rel="stylesheet" href="../assets/css/profile.css">
-    <script defer src="../assets/js/profile.js"></script>
-    <link rel="shortcut icon" href="../assets/img/fave_icon.png" type="image/x-icon">
+    <title>Winxify</title>
+    <link rel="stylesheet" href="../assets/css/portfo.css">
 </head>
 <body>
-    <section class="hidden">
-        <a class="btn" id="back">
-            <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="none" viewBox="0 0 24 24">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m15 19-7-7 7-7"/>
-            </svg>    
-        </a>
-        <div class="title">
-            <h2>Which portfolio do you want to see?</h2>
-        </div>
-    </section>
-    <div class="prof">
-        <section class="hidden">
-            <div class="profiles hidden" >
-                <a href="https://alingetz.github.io/PORTFOLIO/"><img src="./assets/img/1.jpg" alt="" id="ali"></a>
-                <h2>ALI</h2>
-            </div>
-            <div class="profiles hidden">
-                <a href="https://naiahhh.github.io/LANDING-AWD-FEUTECH/"><img src="./assets/img/2.jpg" alt="" id="ava"></a>
-                <h2>AVA</h2>
-            </div>
-            <div class="profiles hidden">
-                <a href="https://jshmrk.github.io/LANDING-AWD-FEUTECH/"><img src="./assets/img/3.jpg" alt="" id="markie"></a>
-                <h2>MARKIE</h2>
-            </div>
-            <div class="profiles hidden">
-                <a href="https://eliiibaltazar.github.io/BALTAZAR_Elizabeth-AWD-FEUTECH/"><img src="./assets/img/4.jpg" alt="" id="lyza"></a>
-                <h2>LYZA</h2>
-            </div>
-            <div class="profiles hidden">
-                <a href="https://spod101.github.io/myPortfolio-AWD-FEUTECH/"><img src="./assets/img/5.jpg" alt=""  id="dalet"></a>
-                <h2>DALET</h2>
-            </div>
-        </section>
+    <div class="back" id="back">
+        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="none" viewBox="0 0 24 24">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m15 19-7-7 7-7"/>
+        </svg>
     </div>
+
+    <div class="content hidden">
+        <h1>Which portfolio do you want to see?</h1>
+
+            <div class="profile-lists">
+                <div class="profile hidden">
+                    <a href="https://alingetz.github.io/PORTFOLIO/"><img class="profile-img" src="../assets/img/port/1.jpg" alt="ali" id="ali"></a>
+                    <h2>ALI</h2>
+                </div>
+            
+                <div class="profile hidden">
+                    <a href="https://naiahhh.github.io/LANDING-AWD-FEUTECH/"><img class="profile-img" src="../assets/img/port/2.jpg" alt="ava" id="ava"></a>
+                    <h2>AVA</h2>
+                </div>
+
+                <div class="profile hidden">
+                    <a href="https://jshmrk.github.io/LANDING-AWD-FEUTECH/"><img class="profile-img" src="../assets/img/port/3.jpg" alt="mark" id="markie"></a>
+                    <h2>MARKIE</h2>
+                </div>
+
+                <div class="profile hidden">
+                    <a href="https://eliiibaltazar.github.io/BALTAZAR_Elizabeth-AWD-FEUTECH/"><img class="profile-img" src="../assets/img/port/4.jpg"  alt="lyza" id="lyza"></a>
+                    <h2>LYZA</h2>
+                </div>
+            
+                <div class="profile hidden">
+                    <a href="https://spod101.github.io/myPortfolio-AWD-FEUTECH/"><img class="profile-img"  src="../assets/img/port/5.jpg"  alt="dalet" id="dalet"></a>
+                    <h2>DALET</h2>
+                </div>
+            </div>
+    </div>
+    <script src="../assets/js/portfo.js"></script>
 </body>
 </html>
