gallery added in sidemenu

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -74,9 +74,9 @@
                         <!-- side menus -->
                         <ul>
                             <li><a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
-                            <li><a class="nav-link active" href="index.html">Home</a></li>
+                            <li><a class="nav-link" href="index.html">Home</a></li>
                             <li><a class="nav-link" href="./pages/about.html">About</a></li>
-                            <li><a class="nav-link" href="./pages/contact.html">Contact</a></li>
+                            <li><a class="nav-link active" href="./pages/gallery.html">Gallery</a></li>
                             <li class="pages"><a href="#">More</a></li>
                             <li class="collapse_btn">
                                 <a class="nav-link plus_collapse" data-bs-toggle="collapse" href="javascript:void(0);"
