--- a/pages/about.html
+++ b/pages/about.html
@@ -31,9 +31,9 @@
                         </button>
                         <!-- menus -->
                         <ul class="navbar-nav flex">
-                            <li><a class="nav-link" href="../index.html">Home</a></li>
+                            <li><a class="nav-link" href="./index.html">Home</a></li>
                             <li><a class="nav-link active" href="about.html">About</a></li>
-                            <li><a class="nav-link" href="gallery.html">Gallery</a></li>
+                            <li><a class="nav-link" href="./gallery.html">Gallery</a></li>
                             <!-- <li><a class="nav-link" href="./contact.html">Contact</a></li> -->
                             <li class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
