--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 </div>
                             </li>
                             <span class="flex">
-                                <button class="logoutSide" id="_logout">Logout</button>
+                                <button class="logoutSide" id="logout">Logout</button>
                             </span>
                         </ul>
                     </div>
