--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
             
                 <div class="profile hidden">
                     <a href="https://naiahhh.github.io/LANDING-AWD-FEUTECH/"><img class="profile-img" src="../assets/img/port/2.jpg" alt="ava" id="ava"></a>
-                    <h2>AVA</h2>
+                    <h2>NAIAH</h2>
                 </div>
 
                 <div class="profile hidden">
