Update about.html to new design

--- a/pages/about.html
+++ b/pages/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../assets/css/slick.min.css">
     <link rel="stylesheet" href="../assets/css/responsive.css">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="shortcut icon" href="../assets/img/fave_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/fav_icon.png" type="image/x-icon">
 
     <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -31,7 +31,7 @@
                         </button>
                         <!-- menus -->
                         <ul class="navbar-nav flex">
-                            <li><a class="nav-link" href="./index.html">Home</a></li>
+                            <li><a class="nav-link" href="../index.html">Home</a></li>
                             <li><a class="nav-link active" href="about.html">About</a></li>
                             <li><a class="nav-link" href="./gallery.html">Gallery</a></li>
                             <!-- <li><a class="nav-link" href="./contact.html">Contact</a></li> -->
@@ -41,20 +41,13 @@
                                     Pages
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                                    <li><a class="dropdown-item" href="comingsoon.html">Services</a></li>
-                                    <li><a class="dropdown-item" href="comingsoon.html">Pricing Plan</a></li>
-                                    <li><a class="dropdown-item" href="../pages/profile.html">Portfolio</a></li>
-                                    <li><a class="dropdown-item" href="comingsoon.html">Team</a></li>
-                                    <li><a class="dropdown-item" href="comingsoon.html">Testimonials</a></li>
-                                    <li><a class="dropdown-item" href="comingsoon.html">FAQ</a></li>
-                                    <li><a class="dropdown-item" href="comingsoon.html">Blog</a></li>
-                                </ul>
+                                    <li><a class="dropdown-item" href="./profile.html">Portfolio</a></li>
                             </li>
                         </ul>
                     </div>
 
                     <div class="flex nav-right">
-                        <a href="../pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a>
+                        <a href="./pages/form.html" class="nav-link" id="usernameLink">Login</a>
                         <!-- header buttons -->
                         <div class="notification" data-count="0" >
                             <i onclick="open_notification()" id="bellIcon" class="fa-solid fa-bell"></i>
@@ -73,10 +66,8 @@
                     <div>
                         <!-- side menus -->
                         <ul>
-                            <li><a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
-                            <li><a class="nav-link" href="index.html">Home</a></li>
-                            <li><a class="nav-link active" href="./pages/about.html">About</a></li>
-                            <li><a class="nav-link" href="./pages/gallery.html">Gallery</a></li>
+                            <li><a class="nav-link active" href="index.html">Home</a></li>
+                            <li><a class="nav-link" href="about.html">About</a></li>
                             <li class="pages"><a href="#">More</a></li>
                             <li class="collapse_btn">
                                 <a class="nav-link plus_collapse" data-bs-toggle="collapse" href="javascript:void(0);"
@@ -85,21 +76,10 @@
                                 </a>
                                 <div class="collapse" id="pages">
                                     <ul>
-                                        <li><a class="nav-link" href="services.html">Services</a></li>
-                                        <li><a class="nav-link" href="pricing.html">Pricing Plan</a></li>
-                                        <li><a class="nav-link" href="./pages/profile.html">Portfolio</a></li>
-                                        <li><a class="nav-link" href="team.html">Team</a></li>
-                                        <li><a class="nav-link" href="testimonials.html">Testimonials</a></li>
-                                        <li><a class="nav-link" href="faq.html">FAQ</a></li>
-                                        <li><a class="nav-link" href="blog.html">Blog</a></li>
-                                        <li><a class="nav-link" href="coming_soon.html">Coming Soon</a></li>
-                                        <li><a class="nav-link" href="404.html">404</a></li>
+                                        <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                                     </ul>
                                 </div>
                             </li>
-                            <span class="flex">
-                                <button class="logoutSide" id="_logout">Logout</button>
-                            </span>
                         </ul>
                     </div>
                 </aside>
@@ -144,13 +124,10 @@
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
                         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                     </span>
-                    <span class="flex">
-                        <button class="logout-Btn" id="_logout">Logout</button>
-                    </span>
                 </section>
             </header>
 
-             <!-- ====== About us section ====== -->
+            <!-- ====== About us section ====== -->
          <section class="about">
             <div class="container">
                 <div class="about-data flex-sb">
@@ -184,7 +161,7 @@
                         </div>
                         <div class="ab-count flex flex-center">
                             <div class="flex flex-center">
-                                <h2>Allyza Goyon</h2>
+                                <h2>Ali Goyon</h2>
                             </div>
                             <p>CEO</p>
                         </div>
@@ -374,15 +351,9 @@
                     
                 </div>
             </div>
-            <div class="team-btn" data-aos="zoom-in">
-                <div class="container flex flex-sb gap-2 flex-wrap">
-                    <h4>Ask A Question To Our Amazing Team, And Get, Response Quickly.
-                    </h4>
-                    <a href="contact.html" class="btn_hover2">Contact Now</a>
-                </div>
-            </div>
         </section>
         <!-- ====== End of 1.10. team section ====== -->
+
 
              <!-- ======  Footer section ====== -->
             <footer>
@@ -393,9 +364,7 @@
                             <h6>Newsletter</h6>
                         </div>
                         <h3>JOIN OUR MAILING LIST</h3>
-                        <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been
-                            the industry's standard dummy text ever.
+                        <p class="text-center">Explore Winxify and discover how it can help you take your portfolio to the next level.
                         </p>
                     </div>
                     <form id="footer-form" class="flex flex-sb gap-2" data-aos="zoom-in" data-aos-delay="400">
@@ -458,8 +427,7 @@
                 </div>
                 <div class="copyright">
                     <div class="container flex flex-sb gap-2 flex-wrap">
-                        <h6>Copyright © 2023 Digitly By <a href="https://codingwebstudio.com/" class="p-0">
-                                codingwebstudio. </a> All Rights Reserved.
+                        <h6>Copyright © 2023 </a> All Rights Reserved.
                         </h6>
                     </div>
                 </div>
