--- a/pages/form.html
+++ b/pages/form.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/64d58efce2.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="../assets/css/form.css" />
-    <link rel="shortcut icon" href="../assets/img/fave_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/fav_icon.png" type="image/x-icon">
     <title>Winxify</title>
   </head>
   <body>
@@ -21,10 +24,6 @@
             <div class="input-field">
               <i class="fas fa-lock"></i>
               <input type="password" id="loginPassword" placeholder="Password" />
-              <label class="show-password-label" for="showPassword">
-                <input type="checkbox" id="showPassword" style="display: none;" />
-                <i class="fas fa-eye" id="eyeIcon"></i>
-              </label>
             </div>
             <input type="submit" value="Login" class="btn solid" />
             <p class="social-text">Or Sign in with</p>
@@ -58,18 +57,10 @@
             <div class="input-field">
               <i class="fas fa-lock"></i>
               <input type="password" id="password" placeholder="Password" />
-              <label class="show-password-label" for="showPassword">
-                <input type="checkbox" id="showPassword" style="display: none;" />
-                <i class="fas fa-eye" id="eyeIcon"></i>
-              </label>
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
               <input type="password" placeholder="Confirm Password" id="confirmPassword" />
-              <label class="show-password-label" for="showPassword">
-                <input type="checkbox" id="showPassword" style="display: none;" />
-                <i class="fas fa-eye" id="eyeIcon"></i>
-              </label>
             </div>
             <input type="submit" class="btn" value="Sign up" />
             <p class="social-text">Or Sign up with</p>
@@ -96,7 +87,7 @@
           <div class="content">
             <h3>New here ?</h3>
             <p>
-              Welcome back! Let's dive back into the action together or sign in with us now!
+              Welcome aboard! We're thrilled to have you join us. Let's get started on this exciting journey together or sign up with us now!
             </p>
             <button class="btn transparent" id="sign-up-btn">
               Sign up
@@ -108,7 +99,7 @@
           <div class="content">
             <h3>One of us ?</h3>
             <p>
-              Welcome aboard! We're thrilled to have you join us. Let's get started on this exciting journey together or sign up with us now!
+              Welcome back! Let's dive back into the action together or sign in with us now!
             </p>
             <button class="btn transparent" id="sign-in-btn">
               Sign in
