Update gallery.html to new design

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../assets/css/slick.min.css">
     <link rel="stylesheet" href="../assets/css/responsive.css">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="shortcut icon" href="../assets/img/fave_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/fav_icon.png" type="image/x-icon">
 
     <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -34,27 +34,20 @@
                             <li><a class="nav-link" href="../index.html">Home</a></li>
                             <li><a class="nav-link " href="./about.html">About</a></li>
                             <li><a class="nav-link active" href="gallery.html">Gallery</a></li>
-                            <li><a class="nav-link" href="./contact.html">Contact</a></li>
                             <li class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     Pages
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                                    <li><a class="dropdown-item" href="comingsoon.html">Services</a></li>
-                                    <li><a class="dropdown-item" href="comingsoon.html">Pricing Plan</a></li>
-                                    <li><a class="dropdown-item" href="../pages/profile.html">Portfolio</a></li>
-                                    <li><a class="dropdown-item" href="comingsoon.html">Team</a></li>
-                                    <li><a class="dropdown-item" href="comingsoon.html">Testimonials</a></li>
-                                    <li><a class="dropdown-item" href="comingsoon.html">FAQ</a></li>
-                                    <li><a class="dropdown-item" href="comingsoon.html">Blog</a></li>
+                                    <li><a class="dropdown-item" href="./profile.html">Portfolio</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
 
                     <div class="flex nav-right">
-                         <a href="../pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a>
+                        <a href="../pages/form.html" class="nav-link" id="usernameLink">Login</a>
                         <!-- header buttons -->
                         <div class="notification" data-count="0" >
                             <i onclick="open_notification()" id="bellIcon" class="fa-solid fa-bell"></i>
@@ -73,10 +66,8 @@
                     <div>
                         <!-- side menus -->
                         <ul>
-                            <li><a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
-                            <li><a class="nav-link" href="index.html">Home</a></li>
-                            <li><a class="nav-link" href="./pages/about.html">About</a></li>
-                            <li><a class="nav-link active" href="./pages/gallery.html">Gallery</a></li>
+                            <li><a class="nav-link active" href="index.html">Home</a></li>
+                            <li><a class="nav-link" href="about.html">About</a></li>
                             <li class="pages"><a href="#">More</a></li>
                             <li class="collapse_btn">
                                 <a class="nav-link plus_collapse" data-bs-toggle="collapse" href="javascript:void(0);"
@@ -85,21 +76,10 @@
                                 </a>
                                 <div class="collapse" id="pages">
                                     <ul>
-                                        <li><a class="nav-link" href="services.html">Services</a></li>
-                                        <li><a class="nav-link" href="pricing.html">Pricing Plan</a></li>
-                                        <li><a class="nav-link" href="./pages/profile.html">Portfolio</a></li>
-                                        <li><a class="nav-link" href="team.html">Team</a></li>
-                                        <li><a class="nav-link" href="testimonials.html">Testimonials</a></li>
-                                        <li><a class="nav-link" href="faq.html">FAQ</a></li>
-                                        <li><a class="nav-link" href="blog.html">Blog</a></li>
-                                        <li><a class="nav-link" href="coming_soon.html">Coming Soon</a></li>
-                                        <li><a class="nav-link" href="404.html">404</a></li>
+                                        <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                                     </ul>
                                 </div>
                             </li>
-                            <span class="flex">
-                                <button class="logoutSide" id="_logout">Logout</button>
-                            </span>
                         </ul>
                     </div>
                 </aside>
@@ -144,9 +124,6 @@
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
                         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                     </span>
-                    <span class="flex">
-                        <button class="logout-Btn" id="_logout">Logout</button>
-                    </span>
                 </section>
             </header>
             
@@ -163,10 +140,6 @@
                                 <h2 class="mt-15 bigger-heading">Our Latest Projects.</h2>
                                 <p> 
                                     Welcome to our mesmerizing gallery of IT student projects, where innovation and ingenuity intersect in a symphony of technological prowess.<br><br>
-                                    Step into our virtual realm and witness a showcase of captivating IT projects that redefine digital possibilities, from immersive VR experiences to cutting-edge software applications. 
-                                    Marvel at the precision of algorithms and seamless integration of technologies, each project a masterpiece inviting exploration and dialogue on technology's societal impact. 
-                                    Whether it's sleek mobile interfaces or innovative IoT devices, our gallery promises an unforgettable journey celebrating the transformative power of IT innovation, where creativity meets code to inspire imagination and possibility. 
-                                    Welcome to a world where every line of code tells a story of innovation.
                                 </p>
                             </div>
                             <div class="flex flex-end w-100">
@@ -396,9 +369,7 @@
                             <h6>Newsletter</h6>
                         </div>
                         <h3>JOIN OUR MAILING LIST</h3>
-                        <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been
-                            the industry's standard dummy text ever.
+                        <p class="text-center">Explore Winxify and discover how it can help you take your portfolio to the next level.
                         </p>
                     </div>
                     <form id="footer-form" class="flex flex-sb gap-2" data-aos="zoom-in" data-aos-delay="400">
@@ -412,8 +383,7 @@
                         <div class="flex flex-start footer-center">
                             <div class="w-33 flex flex-col gap-2 flex-start">
                                 <a href="../index.html"><img src="../assets/img/logo.png" alt="footer-logo"></a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                    ut labore et dolore magna aliqua.
+                                <p>Explore Winxify and discover how it can help you take your Winx portfolio to the next level.
                                 </p>
                                 <span class="flex gap-2">
                                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -462,8 +432,7 @@
                 </div>
                 <div class="copyright">
                     <div class="container flex flex-sb gap-2 flex-wrap">
-                        <h6>Copyright © 2023 Digitly By <a href="https://codingwebstudio.com/" class="p-0">
-                                codingwebstudio. </a> All Rights Reserved.
+                        <h6>Copyright © 2023  All Rights Reserved.
                         </h6>
                     </div>
                 </div>
