--- a/pages/profile.html
+++ b/pages/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Winxify</title>
     <link rel="stylesheet" href="../assets/css/portfo.css">
+    <link rel="shortcut icon" href="./assets/img/fav_icon.png" type="image/x-icon">
 </head>
 <body>
     <div class="back" id="back">
@@ -24,7 +25,7 @@
             
                 <div class="profile hidden">
                     <a href="https://naiahhh.github.io/LANDING-AWD-FEUTECH/"><img class="profile-img" src="../assets/img/port/2.jpg" alt="ava" id="ava"></a>
-                    <h2>AVA</h2>
+                    <h2>NAIAH</h2>
                 </div>
 
                 <div class="profile hidden">
