--- a/index.html
+++ b/index.html
@@ -193,19 +193,19 @@
             </div>
         </section>
         <!-- ====== End of 1.3. card section ====== -->
-        <!-- ====== 1.4. logoipsum section ====== -->
-        <section class="logoipsum">
+        <!-- ====== 1.4. logo section ====== -->
+        <section class="logo">
             <div class="container">
                 <div class="flex flex-col gap-2">
                     <hr class="hr1">
                     <h3 data-aos="zoom-in" class="mb-15">OUR CLIENTS</h3>
                 </div>
-                <div class="logoipsum-slider sliderlogo" data-aos="zoom-in">
-                    <figure><img src="./assets/img/home/4.png" alt="logoipsum"></figure>
-                    <figure><img src="./assets/img/home/5.png" alt="logoipsum"></figure>
-                    <figure><img src="./assets/img/home/3.png" alt="logoipsum"></figure>
-                    <figure><img src="./assets/img/home/4.png" alt="logoipsum"></figure>
-                    <figure><img src="./assets/img/home/5.png" alt="logoipsum"></figure>
+                <div class="logo-slider sliderlogo" data-aos="zoom-in">
+                    <figure><img src="./assets/img/home/4.png"></figure>
+                    <figure><img src="./assets/img/home/5.png"></figure>
+                    <figure><img src="./assets/img/home/3.png"></figure>
+                    <figure><img src="./assets/img/home/4.png"></figure>
+                    <figure><img src="./assets/img/home/5.png"></figure>
                 </div>
                 <hr class="hr2">
             </div>
