--- a/pages/profile.html
+++ b/pages/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Winxify</title>
     <link rel="stylesheet" href="../assets/css/portfo.css">
-    <link rel="shortcut icon" href="./assets/img/fav_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/fav_icon.png" type="image/x-icon">
 </head>
 <body>
     <div class="back" id="back">
