--- a/index.html
+++ b/index.html
@@ -201,16 +201,16 @@
                     <h3 data-aos="zoom-in" class="mb-15">OUR CLIENTS</h3>
                 </div>
                 <div class="logo-slider sliderlogo" data-aos="zoom-in">
-                    <figure><img src="./assets/img/home/4.png"></figure>
-                    <figure><img src="./assets/img/home/5.png"></figure>
+                    <figure><img src="./assets/img/home/2.png"></figure>
                     <figure><img src="./assets/img/home/3.png"></figure>
                     <figure><img src="./assets/img/home/4.png"></figure>
                     <figure><img src="./assets/img/home/5.png"></figure>
+                    <figure><img src="./assets/img/home/6.png"></figure>
                 </div>
                 <hr class="hr2">
             </div>
         </section>
-        <!-- ====== End of 1.4. logoipsum section ====== -->
+        <!-- ====== End of 1.4. logo section ====== -->
         <!-- ====== 1.5. About us section ====== -->
         <!-- ====== 1.7. Services section ====== -->
         <section class="service">
