--- a/pages/about.html
+++ b/pages/about.html
@@ -198,7 +198,7 @@
                 <div class="flex flex-sb">
                     <div class="w-50 p-relative flex flex-center" data-aos="zoom-in">
                         <div class="experience_mask">
-                            <figure><img src="../assets/img/home/experience.png" alt="img"></figure>
+                            <figure><img src="../assets/img/home/experience.jpeg" alt="img"></figure>
                         </div>
                         <div class="experience-hr flex gap-1">
                             <hr>
